base/react/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplez
  labels:
    app: app
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0    
  template:
    metadata:
      labels:
        app: app
    spec:
      imagePullSecrets:
      - name: registry-secret    
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - app
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100      
      containers:
      - name: app
        image: app
        imagePullPolicy: Always    
        ports:
          - name: http-port
            protocol: TCP
            containerPort: 8080
        resources:
          limits:
            memory: "100Mi"
            cpu: "0.2"       
      terminationGracePeriodSeconds: 60
