base/react/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: samplez
spec:
  hosts:
  - "*"
  gateways:
  - default/samplez-gateway
  http:
  - match:
    - uri:
        prefix: /app
    route:
    - destination:
        host: app.default.svc.cluster.local
